# files-upload-gcp

./: .env-test.example  .gitignore  Cargo.toml  Dockerfile  graphql-examples  justfile  readme.md
.cargo/: config.toml
src/: app_error.rs  logging.rs  main.rs  result_ext.rs
src/config/: application_env.rs  logging_env.rs  mod.rs  test_envs.rs
src/graphql/: mod.rs  schema.rs
src/graphql/graphiql_v2_source_docs/: graphiql_v2_source.hbs  graphiql_v2_source.rs  mod.rs
src/graphql/model/: user.rs
src/graphql/ql/: gcp_storage_mutation.rs  mod.rs  user_mutation.rs  user_query.rs
